@@ -41,6 +41,8 @@ Fixes
     (Issue #3336)
 
 Enhancements
+  * Add simple atomic distance analysis to `analysis.distances` with
+    new class `AtomicDistances` (Issue #3654)
   * Improved speed of chi1_selection (PR #4109)
   * Add `progressbar_kwargs` parameter to `AnalysisBase.run` method, allowing
     to modify description, position etc of tqdm progressbars.
